--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "apollo-server-express": "^2.19.0",
     "express": "^4.17.1",
-    "graphql": "^15.4.0"
+    "firebase-admin": "^9.4.2",
+    "graphql": "^15.4.0",
+    "graphql-import": "^1.0.2",
+    "firebase-functions": "^3.11.0"
   }
 }
